// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches snapshot 1 1`] = `
<div
  className="button-style"
  data-testid="button"
>
  save
</div>
`;

exports[`Matches snapshot 2 1`] = `
<div
  className="button-style"
  data-testid="button"
>
  click me please
</div>
`;
